# PixEngine

./: .eslintrc.json  .gitattributes  .gitignore  .prettierignore  README.md  aperture-development-plan.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: coding-rules.md  settings.local.json
public/: dockview-layout.json
scripts/: bump-version.js  generate-config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.template.toml  Cargo.toml  tauri.conf.json  tauri.conf.template.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  folder_watcher.rs  idle_detector.rs  lib.rs  rating.rs  thumbnail.rs  thumbnail_queue.rs
src/components/: ErrorBoundary.tsx
src/components/common/: ContextMenu.tsx  FileConflictDialog.tsx
src/components/dev/: UITestPanel.tsx
src/components/layout/: MainLayout.tsx  StatusBar.tsx  TitleBar.tsx
src/components/panels/: FolderTreePanel.tsx  ImageViewerPanel.tsx  MetadataPanel.tsx  ThumbnailPanel.tsx
src/components/ui/: Button.tsx  ContextMenu.tsx  Dialog.tsx  Toast.tsx
src/components/viewers/: KonvaImageViewer.tsx  OpenSeadragonViewer.tsx  PixiImageViewer.tsx
src/contexts/: DialogContext.tsx  FolderContext.tsx  ImageContext.tsx  ToastContext.tsx  WindowFocusContext.tsx
src/hooks/: useDebounce.ts  useLayoutState.ts  useThrottle.ts  useWindowState.ts
src/lib/: constants.ts  errorHandler.ts  pathUtils.ts  rating.ts  theme.ts  webglUtils.ts
src/lib/__tests__/: errorHandler.test.ts  pathUtils.test.ts
src/store/: devStore.ts  viewerStore.ts
src/styles/: dockview-theme-dark-origin.css  dockview-theme-dark.css
src/test/: setup.ts
src/workers/: histogram.worker.ts
