[package]
name = "pixengine"
version = "0.1.11"
description = "PixEngine - 고성능 이미지 뷰어 & 컬링 툴"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"

# 비동기 런타임
tokio = { version = "1", features = ["full"] }

# 윈도우 핸들 접근
raw-window-handle = "0.6"

# 전역 상태 관리
lazy_static = "1.5"

# 이미지 처리
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
jpeg-decoder = "0.3"           # DCT 스케일링 지원
fast_image_resize = "4.0"      # 고속 리사이징
webp = "0.3"                   # WebP 인코딩 (빠른 썸네일)

# 병렬 처리
rayon = "1.10"
num_cpus = "1.16"              # CPU 코어 수 감지

# 캐싱
dashmap = "6.0"
lru = "0.12"
blake3 = "1.5"                 # 캐시 키 해싱

# 파일 시스템
walkdir = "2"

# 메타데이터
kamadak-exif = "0.5"

# 시간 처리
chrono = "0.4"

# 인코딩
base64 = "0.22"                # Base64 인코딩

# Windows API (유휴 시간 감지, 윈도우 포커스 확인)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = 3        # 최대 최적화
lto = true           # Link Time Optimization
codegen-units = 1    # 단일 코드 생성 유닛 (더 나은 최적화)
strip = true         # 심볼 제거 (파일 크기 감소)
panic = "abort"      # 패닉 시 언와인딩 대신 즉시 종료

